--- a/DockingAdminPanel/Views/Doctors/Create.cshtml
+++ b/DockingAdminPanel/Views/Doctors/Create.cshtml
@@ -11,93 +11,104 @@
     <div class="form-wrap">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-			<div class="row">
-				<div class="form-group col-6">
+			<div class="row mb-3">
+				<div class="form-floating col-6">
+					<input asp-for="FirstName" class="form-control" style="height: 53px;" placeholder="Enter First Name" />
 					<label asp-for="FirstName" class="control-label"></label>
-					<input asp-for="FirstName" class="form-control" />
 					<span asp-validation-for="FirstName" class="text-danger"></span>
 				</div>
-				<div class="form-group  col-6">
+				<div class="form-floating  col-6">
+					<input asp-for="LastName" class="form-control" style="height: 53px;" placeholder="Enter Last Name" />
 					<label asp-for="LastName" class="control-label"></label>
-					<input asp-for="LastName" class="form-control" />
 					<span asp-validation-for="LastName" class="text-danger"></span>
 				</div>
 			</div>
 
-			<div class="row">
-				<div class="form-group col-6">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
+			<div class="row mb-3">
+				<div class="form-floating col-6">
+               
+                <input asp-for="Email" class="form-control" style="height: 53px;" placeholder="Enter Email" />
+				 <label asp-for="Email" class="control-label"></label>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-				<div class="form-group col-6">
-                <label asp-for="PhoneNumber" class="control-label"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
+				<div class="form-floating col-6">
+                
+                <input asp-for="PhoneNumber" class="form-control" style="height: 53px;" placeholder="Enter Phone Number" />
+				<label asp-for="PhoneNumber" class="control-label"></label>
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
 			</div>
-			<div class="row">
-				<div class="form-group col-6">
-                <label asp-for="Specialization" class="control-label"></label>
-                <input asp-for="Specialization" class="form-control" />
+			<div class="row mb-3">
+				<div class="form-floating col-6">
+               
+                <input asp-for="Specialization" class="form-control" style="height: 53px;" placeholder="Enter Specialization" />
+				 <label asp-for="Specialization" class="control-label"></label>
                 <span asp-validation-for="Specialization" class="text-danger"></span>
             </div>
-				<div class="form-group col-6">
-                <label asp-for="LicenseNumber" class="control-label"></label>
-                <input asp-for="LicenseNumber" class="form-control" />
+				<div class="form-floating col-6">
+               
+                <input asp-for="LicenseNumber" class="form-control" style="height: 53px;" placeholder="Enter License Number" />
+				 <label asp-for="LicenseNumber" class="control-label"></label>
                 <span asp-validation-for="LicenseNumber" class="text-danger"></span>
             </div>
 			</div>
-			<div class="row">
-				<div class="form-group col-6">
-                <label asp-for="DateOfBirth" class="control-label"></label>
-                <input asp-for="DateOfBirth" class="form-control" />
+			<div class="row mb-3">
+				<div class="form-floating col-6">
+               
+                <input asp-for="DateOfBirth" class="form-control" style="height: 53px;" placeholder="Enter Date Of Birth" />
+				 <label asp-for="DateOfBirth" class="control-label"></label>
                 <span asp-validation-for="DateOfBirth" class="text-danger"></span>
             </div>
-				<div class="form-group col-6">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
+				<div class="form-floating col-6">
+               
+                <input asp-for="Address" class="form-control" style="height: 53px;" placeholder="Enter Address" />
+				 <label asp-for="Address" class="control-label"></label>
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
 			</div>
-			<div class="row">
-				<div class="form-group col-4">
-                <label asp-for="City" class="control-label"></label>
-                <input asp-for="City" class="form-control" />
+			<div class="row mb-3">
+				<div class="form-floating col-4">
+               
+                <input asp-for="City" class="form-control" style="height: 53px;" placeholder="Enter City" />
+				 <label asp-for="City" class="control-label"></label>
                 <span asp-validation-for="City" class="text-danger"></span>
             </div>
-				<div class="form-group col-4">
-                <label asp-for="State" class="control-label"></label>
-                <input asp-for="State" class="form-control" />
+				<div class="form-floating col-4">
+                
+                <input asp-for="State" class="form-control" style="height: 53px;" placeholder="Enter State" />
+				<label asp-for="State" class="control-label"></label>
                 <span asp-validation-for="State" class="text-danger"></span>
             </div>
 
-				<div class="form-group col-4">
-                <label asp-for="ZipCode" class="control-label"></label>
-                <input asp-for="ZipCode" class="form-control" />
+				<div class="form-floating col-4">
+                
+                <input asp-for="ZipCode" class="form-control" style="height: 53px;" placeholder="Enter Zip Code" />
+				<label asp-for="ZipCode" class="control-label"></label>
                 <span asp-validation-for="ZipCode" class="text-danger"></span>
             </div>
 			</div>
-			<div class="row">
+			<div class="row mb-3 justify-content-around">
 				@*<div class="form-group col-4">
                 <label asp-for="TotalFee" class="control-label"></label>
 					<input asp-for="TotalFee" type="number" class="form-control" />
 					<span asp-validation-for="TotalFee" class="text-danger"></span>
             </div>*@
-				<div class="form-group col-4">
+				<div class="form-floating col-4">
+					
+					<input asp-for="DoctorFee" type="number" class="form-control" style="height: 53px;" placeholder="Enter Doctor Fee" />
 					<label asp-for="DoctorFee" class="control-label"></label>
-					<input asp-for="DoctorFee" type="number" class="form-control" />
 					<span asp-validation-for="DoctorFee" class="text-danger"></span>
 				</div>
-				<div class="form-group col-4">
+				<div class="form-floating col-4">
+					
+					<input asp-for="ClinicCharges" type="number" class="form-control" style="height: 53px;" placeholder="Enter Clinic Charges" />
 					<label asp-for="ClinicCharges" class="control-label"></label>
-					<input asp-for="ClinicCharges" type="number" class="form-control" />
 					<span asp-validation-for="ClinicCharges" class="text-danger"></span>
 				</div>
 			</div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-				<a asp-action="Index" class="btn btn-warning">Back to List</a>
+            <div class="form-group text-center">
+                <button type="submit" class="btn btn-primary"><i class="fa-solid fa-circle-plus"></i> Create</button>
+				<a asp-action="Index" class="btn btn-info"><i class="fa-solid fa-circle-arrow-left"></i> Back to List</a>
             </div>
         </form>
     </div>
@@ -250,4 +261,13 @@
 			-moz-box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
 			box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
 		}
+
+	.form-floating .control-label {
+  left: 10px;
+}
+
+	.btn-info:hover {
+        background: transparent !important;
+    color: #25cff2 !important;
+    }	
 </style>
