--- a/DockingAdminPanel/Views/Doctors/Index.cshtml
+++ b/DockingAdminPanel/Views/Doctors/Index.cshtml
@@ -87,7 +87,7 @@
                                 @Html.DisplayFor(modelItem => item.DoctorFee)
             </td>
             <td class="text-end w-25">
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-seconday"><i class="fa-regular fa-pen-to-square"></i>  Edit</a> |
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-secondary"><i class="fa-regular fa-pen-to-square"></i> Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-success"><i class="fa-solid fa-circle-info"></i> Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i> Delete</a>
             </td>
