--- a/DockingAdminPanel/Views/LabCategories/Create.cshtml
+++ b/DockingAdminPanel/Views/LabCategories/Create.cshtml
@@ -13,7 +13,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
-                <input asp-for="Name" class="form-control" placeholder="Name" />
+                <input asp-for="Name" class="form-control" placeholder="Name" style="height: 53px;" />
                 <label asp-for="Name" class="control-label"></label>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
