--- a/DockingAdminPanel/Views/LabItems/Edit.cshtml
+++ b/DockingAdminPanel/Views/LabItems/Edit.cshtml
@@ -9,37 +9,53 @@
 <h4>Lab Items</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6 offset-md-2">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-floating mb-3">
-               
-                <input asp-for="TestName" class="form-control" placeholder="Enter Test Name" />
+
+            <div class="row">
+                <div class="col-md-6">
+                      <div class="form-floating mb-3">
+                <input asp-for="TestName" class="form-control" placeholder="Enter Test Name" style="height: 53px;" />
                  <label asp-for="TestName" class="control-label"></label>
                 <span asp-validation-for="TestName" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
-                
-                <input asp-for="Price" class="form-control" placeholder="Enter Price" />
+                </div>
+
+                 <div class="col-md-6">
+                     <div class="form-floating mb-3">
+                <input asp-for="Price" class="form-control" placeholder="Enter Price" style="height: 53px;" />
                 <label asp-for="Price" class="control-label"></label>
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
+                </div>
+
+                 <div class="col-md-6">
+
             <div class="form-floating mb-3">
-             
-                <input asp-for="Units" class="form-control" placeholder="Enter Units" />
+                <input asp-for="Units" class="form-control" placeholder="Enter Units" style="height: 53px;" />
                    <label asp-for="Units" class="control-label"></label>
                 <span asp-validation-for="Units" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
-             
-                <input asp-for="NormalValue" class="form-control" placeholder="Enter Normal Value" />
+                </div>
+
+                 <div class="col-md-6">
+                     <div class="form-floating mb-3">
+                <input asp-for="NormalValue" class="form-control" placeholder="Enter Normal Value" style="height: 53px;" />
                    <label asp-for="NormalValue" class="control-label"></label>
                 <span asp-validation-for="NormalValue" class="text-danger"></span>
             </div>
+                </div>
+
+            </div>
+
+          
+           
+           
             <div class="form-group">
-                <button type="submit" class="btn btn-primary"><i class="fa-solid fa-hard-drive"></i> Save</button>
-                <a asp-action="Index" class="btn btn-info"><i class="fa-solid fa-circle-arrow-left"></i> Back to List</a>
+                <button type="submit" class="btn btn-primary w-25"><i class="fa-solid fa-hard-drive"></i> Save</button>
+                <a asp-action="Index" class="btn btn-info w-25"><i class="fa-solid fa-circle-arrow-left"></i> Back to List</a>
             </div>
         </form>
     </div>
