--- a/DockingAdminPanel/Views/PatientTokens/Create.cshtml
+++ b/DockingAdminPanel/Views/PatientTokens/Create.cshtml
@@ -13,13 +13,13 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
-                <input asp-for="Counter" class="form-control" placeholder="Counter" />
+                <input asp-for="Counter" class="form-control" placeholder="Counter" style="height: 53px;" />
                 <label asp-for="Counter" class="control-label">Counter</label>
                 <span asp-validation-for="Counter" class="text-danger"></span>
             </div>
         
             <div class="form-group mt-3">
-                <button type="submit" value="Create" class="btn btn-primary"><i class="fa-solid fa-circle-plus"></i> Create</button>
+                <button type="submit" class="btn btn-primary w-25"><i class="fa-solid fa-circle-plus"></i> Create</button>
                 <a asp-action="Index" class="btn btn-info"><i class="fa-solid fa-circle-arrow-left"></i> Back to List</a>
             </div>
         </form>
