--- a/DockingAdminPanel/Views/Patients/AddTestsAppointments.cshtml
+++ b/DockingAdminPanel/Views/Patients/AddTestsAppointments.cshtml
@@ -54,8 +54,8 @@
  
 			<h5 id="total">total Amount : <input type="number" value="0" id="tot" readonly /></h5>
 			<div class="form-group">
-				<input type="submit" value="Pay" class="btn btn-primary" />
-				<a asp-action="Index" class="btn btn-warning">Back to List</a>
+				<button type="submit" class="btn btn-primary"><i class="fa-solid fa-money-bill"></i> Pay</button>
+				<a asp-action="Index" class="btn btn-info"><i class="fa-solid fa-circle-arrow-left"></i> Back to List</a>
 			</div>
         </form>
     </div>
@@ -258,4 +258,11 @@
 			-moz-box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
 			box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
 		}
+
+
+	.btn-info:hover {
+        background: transparent !important;
+    color: #25cff2 !important;
+    }
+	
 </style>
