--- a/DockingAdminPanel/Views/Patients/Delete.cshtml
+++ b/DockingAdminPanel/Views/Patients/Delete.cshtml
@@ -65,7 +65,21 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <button type="submit" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i> Delete</button> |
+        <a asp-action="Index" class="btn btn-info"><i class="fa-solid fa-circle-arrow-left"></i> Back to List</a>
     </form>
 </div>
+
+
+<style>
+    .btn-info:hover {
+        background: transparent !important;
+    color: #25cff2 !important;
+    }	
+
+    .btn-danger:hover{
+        background: transparent !important;
+        color: #dc3545 !important;
+    }
+
+</style>
